terraform/modules/vpc_peering_sg/modify_bosh_sg.tf
resource "aws_security_group_rule" "bosh_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "dns_tcp" {
  type              = "ingress"
  from_port         = 53
  to_port           = 53
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "dns_udp" {
  type              = "ingress"
  from_port         = 53
  to_port           = 53
  protocol          = "udp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "ntp_udp" {
  type              = "ingress"
  from_port         = 123
  to_port           = 123
  protocol          = "udp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "bosh_nats" {
  type              = "ingress"
  from_port         = 4222
  to_port           = 4222
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "bosh_agent" {
  type              = "ingress"
  from_port         = 6868
  to_port           = 6868
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "uaa_http" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "uaa_https" {
  type              = "ingress"
  from_port         = 8443
  to_port           = 8443
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "credhub_https" {
  type              = "ingress"
  from_port         = 8844
  to_port           = 8844
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "bosh_director" {
  type              = "ingress"
  from_port         = 25555
  to_port           = 25555
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "bosh_registry" {
  type              = "ingress"
  from_port         = 25777
  to_port           = 25777
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "tooling_syslog_udp_access" {
  type              = "ingress"
  from_port         = 5431
  to_port           = 5431
  protocol          = "udp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

# NLB UDP target groups must use a TCP health check. The ingestor's plain
# syslog input on 5431 is UDP-only, so the health check targets the ingestor's
# syslog_tls TCP listener on 6972. Allow TCP 6972 so the check can connect.
resource "aws_security_group_rule" "tooling_syslog_udp_healthcheck_access" {
  type              = "ingress"
  from_port         = 6972
  to_port           = 6972
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "tooling_syslog_access" {
  type              = "ingress"
  from_port         = 5514
  to_port           = 5514
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}

resource "aws_security_group_rule" "tooling_bbs_cf_exporter_in_prometheus_access" {
  type              = "ingress"
  from_port         = 8889
  to_port           = 8889
  protocol          = "tcp"
  cidr_blocks       = [var.source_vpc_cidr]
  security_group_id = var.target_bosh_security_group
}
